--- a/man/figures/tables/Rmd/binom.p.Rmd
+++ b/man/figures/tables/Rmd/binom.p.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Default Bayes Factors"
+title: "One-sided p Values"
 output: 
   html_document:
     theme: journal
 ---
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = FALSE}
@@ -38,18 +38,15 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-    tab[rows, columns] <- evaluation(materiality = 0.10, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.10, likelihood = 'binomial'))$posterior$hypotheses$bf.hmin
+    tab[rows, columns] <- evaluation(materiality = 0.10, n = n[rows], x = k[columns], method = "binomial")$p.value
   }
 }
 
 table <- as.data.frame(tab)
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
-table <- round(table, 2)
 
-for(i in 2:12){
-  table[, i] <- ifelse(table[, i] > 10000000, yes = format(table[, i], scientific = T), no = table[, i])
-}
+table[, 2:12] <- format.pval(table[, 2:12], digits = 2, eps = 0.01)
 
 
 ```
@@ -57,15 +54,15 @@ for(i in 2:12){
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 1: Statistical Sampling Results based on the Beta Distribution — <br>Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 10 Percent</center>",
+                       caption = "<center>Table 1: Statistical Sampling Results based on the Binomial Distribution — <br>One-sided <i>p</i> Values against a Performance Materiality of 10 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on equal prior probabilities and zero expected errors.")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents one-sided p values against the null hypothesis \u03B8 = 0.1")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -74,7 +71,7 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
@@ -85,33 +82,30 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-    tab[rows, columns] <- evaluation(materiality = 0.05, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.05, likelihood = 'binomial'))$posterior$hypotheses$$bf.hmin
+    tab[rows, columns] <- evaluation(materiality = 0.05, n = n[rows], x = k[columns], method = "binomial")$p.value
   }
 }
 
 table <- as.data.frame(tab)
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
-table <- round(table, 2)
 
-for(i in 2:12){
-  table[, i] <- ifelse(table[, i] > 10000000, yes = format(table[, i], scientific = T), no = table[, i])
-}
+table[, 2:12] <- format.pval(table[, 2:12], digits = 2, eps = 0.01)
 
 ```
 
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 2: Statistical Sampling Results based on the Beta Distribution — <br>Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 5 Percent</center>",
+                       caption = "<center>Table 2: Statistical Sampling Results based on the Binomial Distribution — <br>One-sided <i>p</i> Values against a Performance Materiality of 5 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on equal prior probabilities and zero expected errors.")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents one-sided p values against the null hypothesis \u03B8 = 0.05")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -120,7 +114,7 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
@@ -131,33 +125,30 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-    tab[rows, columns] <- evaluation(materiality = 0.02, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.02, likelihood = 'binomial'))$posterior$hypotheses$$bf.hmin
+    tab[rows, columns] <- evaluation(materiality = 0.02, n = n[rows], x = k[columns], method = "binomial")$p.value
   }
 }
 
 table <- as.data.frame(tab)
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
-table <- round(table, 2)
 
-for(i in 2:12){
-  table[, i] <- ifelse(table[, i] > 10000000, yes = format(table[, i], scientific = T), no = table[, i])
-}
+table[, 2:12] <- format.pval(table[, 2:12], digits = 2, eps = 0.01)
 
 ```
 
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 3: Statistical Sampling Results based on the Beta Distribution — <br>Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 2 Percent</center>",
+                       caption = "<center>Table 3: Statistical Sampling Results based on the Binomial Distribution — <br>One-sided <i>p</i> Values against a Performance Materiality of 2 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on equal prior probabilities and zero expected errors.")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents d values against the null hypothesis \u03B8 = 0.02")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -166,7 +157,7 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
@@ -177,7 +168,7 @@ k <- 0:10
 tab <- matrix(NA, nrow = length(n), ncol = length(k))
 for(rows in 1:length(n)){
   for(columns in 1:length(k)){
-    tab[rows, columns] <- evaluation(materiality = 0.01, n = n[rows], x = k[columns], prior = auditPrior(method = 'median', materiality = 0.01, likelihood = 'binomial'))$posterior$hypotheses$$bf.hmin
+    tab[rows, columns] <- evaluation(materiality = 0.01, n = n[rows], x = k[columns], method = "binomial")$p.value
   }
 }
 
@@ -185,20 +176,22 @@ table <- as.data.frame(tab)
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
+table[, 2:12] <- format.pval(table[, 2:12], digits = 2, eps = 0.01)
+
 ```
 
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 4: Statistical Sampling Results based on the Beta Distribution — <br>Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 1 Percent</center>",
+                       caption = "<center>Table 4: Statistical Sampling Results based on the Binomial Distribution — <br>One-sided <i>p</i> Values against a Performance Materiality of 1 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on equal prior probabilities and zero expected errors.")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents one-sided p values against the null hypothesis \u03B8 = 0.01")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
