--- a/man/figures/tables/Rmd/hyper.lbfd.Rmd
+++ b/man/figures/tables/Rmd/hyper.lbfd.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Statistical Sampling Results"
+title: "Logarithmic Default Bayes Factors"
 output: 
   html_document:
     theme: journal
 ---
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = FALSE}
@@ -18,6 +18,7 @@ colorize <- function(x, color) {
       x)
   } else x
 }
+options(knitr.kable.NA = '')
 library(jfa)
 ```
 
@@ -32,7 +33,6 @@ library(jfa)
 
 ```{r, include = F}
 
-conf.level <- 0.90
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 100
@@ -42,12 +42,11 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      ss <- jfa::evaluation(conf.level, n = n[rows], x = k[columns], materiality = 0.05, method = "hypergeometric", N.units = N)
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+      tab[rows, columns] <- log(evaluation(materiality = 0.10, n = n[rows], x = k[columns], method = "hypergeometric", N.units = N, prior = TRUE)$posterior$hypotheses$bf.hmin)
   }
 }
+
 table <- as.data.frame(tab)
-table[is.na(table)] <- ""
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
@@ -56,15 +55,15 @@ colnames(table) <- c('Sample Size', k)
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 1: Statistical Sampling Results based on the Hypergeometric Distribution (N = 100) — <br>Upper Limits at 10 Percent Risk of Overreliance</center>",
+                       caption = "<center>Table 1: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 100) — <br>Logarithmic Default Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 10 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on no prior information\nBF = e^log(BF)")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -73,12 +72,11 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
 
-conf.level <- 0.90
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 500
@@ -88,12 +86,11 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      ss <- jfa::evaluation(conf.level, n = n[rows], x = k[columns], materiality = 0.05, method = "hypergeometric", N.units = N)
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+      tab[rows, columns] <- log(evaluation(materiality = 0.10, n = n[rows], x = k[columns], method = "hypergeometric", N.units = N, prior = TRUE)$posterior$hypotheses$bf.hmin)
   }
 }
+
 table <- as.data.frame(tab)
-table[is.na(table)] <- ""
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
@@ -102,15 +99,15 @@ colnames(table) <- c('Sample Size', k)
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 2: Statistical Sampling Results based on the Hypergeometric Distribution (N = 500) — <br>Upper Limits at 10 Percent Risk of Overreliance</center>",
+                       caption = "<center>Table 2: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 500) — <br>Logarithmic Default Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 10 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on no prior information\nBF = e^log(BF)")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -119,12 +116,11 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
 
-conf.level <- 0.90
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 1000
@@ -134,12 +130,11 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      ss <- jfa::evaluation(conf.level, n = n[rows], x = k[columns], materiality = 0.05, method = "hypergeometric", N.units = N)
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+      tab[rows, columns] <- log(evaluation(materiality = 0.10, n = n[rows], x = k[columns], method = "hypergeometric", N.units = N, prior = TRUE)$posterior$hypotheses$bf.hmin)
   }
 }
+
 table <- as.data.frame(tab)
-table[is.na(table)] <- ""
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
@@ -148,15 +143,15 @@ colnames(table) <- c('Sample Size', k)
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 3: Statistical Sampling Results based on the Hypergeometric Distribution (N = 1000) — <br>Upper Limits at 10 Percent Risk of Overreliance</center>",
+                       caption = "<center>Table 3: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 1000) — <br>Logarithmic Default Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 10 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on no prior information\nBF = e^log(BF)")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -165,12 +160,13 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
 
-conf.level <- 0.95
+confidence <- 0.95
+materiality <- 0.05
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 100
@@ -180,12 +176,11 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      ss <- jfa::evaluation(conf.level, n = n[rows], x = k[columns], materiality = 0.05, method = "hypergeometric", N.units = N)
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+      tab[rows, columns] <- log(evaluation(materiality = 0.05, n = n[rows], x = k[columns], method = "hypergeometric", N.units = N, prior = TRUE)$posterior$hypotheses$bf.hmin)
   }
 }
+
 table <- as.data.frame(tab)
-table[is.na(table)] <- ""
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
@@ -194,15 +189,15 @@ colnames(table) <- c('Sample Size', k)
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 4: Statistical Sampling Results based on the Hypergeometric Distribution (N = 100) — <br>Upper Limits at 5 Percent Risk of Overreliance</center>",
+                       caption = "<center>Table 4: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 100) — <br>Logarithmic Default Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 5 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on no prior information\nBF = e^log(BF)")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -211,12 +206,11 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
 
-conf.level <- 0.95
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 500
@@ -226,12 +220,11 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      ss <- jfa::evaluation(conf.level, n = n[rows], x = k[columns], materiality = 0.05, method = "hypergeometric", N.units = N)
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+      tab[rows, columns] <- log(evaluation(materiality = 0.05, n = n[rows], x = k[columns], method = "hypergeometric", N.units = N, prior = TRUE)$posterior$hypotheses$bf.hmin)
   }
 }
+
 table <- as.data.frame(tab)
-table[is.na(table)] <- ""
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
@@ -240,15 +233,15 @@ colnames(table) <- c('Sample Size', k)
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 5: Statistical Sampling Results based on the Hypergeometric Distribution (N = 500) — <br>Upper Limits at 5 Percent Risk of Overreliance</center>",
+                       caption = "<center>Table 5: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 500) — <br>Logarithmic Default Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 5 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on no prior information\nBF = e^log(BF)")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -257,12 +250,11 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
 
-conf.level <- 0.95
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 1000
@@ -272,12 +264,11 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      ss <- jfa::evaluation(conf.level, n = n[rows], x = k[columns], materiality = 0.05, method = "hypergeometric", N.units = N)
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+      tab[rows, columns] <- log(evaluation(materiality = 0.05, n = n[rows], x = k[columns], method = "hypergeometric", N.units = N, prior = TRUE)$posterior$hypotheses$bf.hmin)
   }
 }
+
 table <- as.data.frame(tab)
-table[is.na(table)] <- ""
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
@@ -286,15 +277,15 @@ colnames(table) <- c('Sample Size', k)
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 6: Statistical Sampling Results based on the Hypergeometric Distribution (N = 1000) — <br>Upper Limits at 5 Percent Risk of Overreliance</center>",
+                       caption = "<center>Table 6: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 1000) — <br>Logarithmic Default Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 5 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on no prior information\nBF = e^log(BF)")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -303,12 +294,11 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
 
-conf.level <- 0.975
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 100
@@ -318,12 +308,11 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      ss <- jfa::evaluation(conf.level, n = n[rows], x = k[columns], materiality = 0.05, method = "hypergeometric", N.units = N)
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+      tab[rows, columns] <- log(evaluation(materiality = 0.02, n = n[rows], x = k[columns], method = "hypergeometric", N.units = N, prior = TRUE)$posterior$hypotheses$bf.hmin)
   }
 }
+
 table <- as.data.frame(tab)
-table[is.na(table)] <- ""
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
@@ -332,15 +321,15 @@ colnames(table) <- c('Sample Size', k)
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 7: Statistical Sampling Results based on the Hypergeometric Distribution (N = 100) — <br>Upper Limits at 2.5 Percent Risk of Overreliance</center>",
+                       caption = "<center>Table 7: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 100) — <br>Logarithmic Default Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 2 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on no prior information\nBF = e^log(BF)")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -349,12 +338,11 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
 
-conf.level <- 0.975
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 500
@@ -364,12 +352,11 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      ss <- jfa::evaluation(conf.level, n = n[rows], x = k[columns], materiality = 0.05, method = "hypergeometric", N.units = N)
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+      tab[rows, columns] <- log(evaluation(materiality = 0.02, n = n[rows], x = k[columns], method = "hypergeometric", N.units = N, prior = TRUE)$posterior$hypotheses$bf.hmin)
   }
 }
+
 table <- as.data.frame(tab)
-table[is.na(table)] <- ""
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
@@ -378,15 +365,15 @@ colnames(table) <- c('Sample Size', k)
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 8: Statistical Sampling Results based on the Hypergeometric Distribution (N = 500) — <br>Upper Limits at 2.5 Percent Risk of Overreliance</center>",
+                       caption = "<center>Table 8: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 500) — <br>Logarithmic Default Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 2 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on no prior information\nBF = e^log(BF)")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -395,12 +382,11 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
 
-conf.level <- 0.975
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 1000
@@ -410,12 +396,11 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      ss <- jfa::evaluation(conf.level, n = n[rows], x = k[columns], materiality = 0.05, method = "hypergeometric", N.units = N)
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+      tab[rows, columns] <- log(evaluation(materiality = 0.02, n = n[rows], x = k[columns], method = "hypergeometric", N.units = N, prior = TRUE)$posterior$hypotheses$bf.hmin)
   }
 }
+
 table <- as.data.frame(tab)
-table[is.na(table)] <- ""
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
@@ -424,15 +409,15 @@ colnames(table) <- c('Sample Size', k)
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 9: Statistical Sampling Results based on the Hypergeometric Distribution (N = 1000) — <br>Upper Limits at 2.5 Percent Risk of Overreliance</center>",
+                       caption = "<center>Table 9: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 1000) — <br>Logarithmic Default Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 2 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on no prior information\nBF = e^log(BF)")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -441,12 +426,11 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
 
-conf.level <- 0.99
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 100
@@ -456,12 +440,11 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      ss <- jfa::evaluation(conf.level, n = n[rows], x = k[columns], materiality = 0.05, method = "hypergeometric", N.units = N)
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+      tab[rows, columns] <- log(evaluation(materiality = 0.01, n = n[rows], x = k[columns], method = "hypergeometric", N.units = N, prior = TRUE)$posterior$hypotheses$bf.hmin)
   }
 }
+
 table <- as.data.frame(tab)
-table[is.na(table)] <- ""
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
@@ -470,15 +453,15 @@ colnames(table) <- c('Sample Size', k)
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 10: Statistical Sampling Results based on the Hypergeometric Distribution (N = 100) — <br>Upper Limits at 1 Percent Risk of Overreliance</center>",
+                       caption = "<center>Table 10: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 100) — <br>Logarithmic Default Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 1 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on no prior information\nBF = e^log(BF)")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -487,12 +470,11 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
 
-conf.level <- 0.99
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 500
@@ -502,12 +484,11 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      ss <- jfa::evaluation(conf.level, n = n[rows], x = k[columns], materiality = 0.05, method = "hypergeometric", N.units = N)
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+      tab[rows, columns] <- log(evaluation(materiality = 0.01, n = n[rows], x = k[columns], method = "hypergeometric", N.units = N, prior = TRUE)$posterior$hypotheses$bf.hmin)
   }
 }
+
 table <- as.data.frame(tab)
-table[is.na(table)] <- ""
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
@@ -516,15 +497,15 @@ colnames(table) <- c('Sample Size', k)
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 11: Statistical Sampling Results based on the Hypergeometric Distribution (N = 500) — <br>Upper Limits at 1 Percent Risk of Overreliance</center>",
+                       caption = "<center>Table 11: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 500) — <br>Logarithmic Default Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 1 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on no prior information\nBF = e^log(BF)")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
@@ -533,12 +514,11 @@ kableExtra::kable_paper(ktable, "striped")
 \newpage
 
 <p align="center">
-  <img src="jfaLogo.png" alt="logo" width="200" height="231">
+  <img src="logo.png" alt="logo" width="200" height="231">
 </p>
 
 ```{r, include = F}
 
-conf.level <- 0.99
 n <- c(seq(20, 100, 5), 125, 150, 200, 300, 400, 500)
 k <- 0:10
 N <- 1000
@@ -548,12 +528,11 @@ for(rows in 1:length(n)){
   for(columns in 1:length(k)){
     if(n[rows] >= N)
       next
-      ss <- jfa::evaluation(conf.level, n = n[rows], x = k[columns], materiality = 0.05, method = "hypergeometric", N.units = N)
-      tab[rows, columns] <- ceiling(ss$ub * 1000) / 10
+      tab[rows, columns] <- log(evaluation(materiality = 0.01, n = n[rows], x = k[columns], method = "hypergeometric", N.units = N, prior = TRUE)$posterior$hypotheses$bf.hmin)
   }
 }
+
 table <- as.data.frame(tab)
-table[is.na(table)] <- ""
 table <- cbind(n = n, table)
 colnames(table) <- c('Sample Size', k)
 
@@ -562,15 +541,15 @@ colnames(table) <- c('Sample Size', k)
 ```{r, echo = FALSE}
 ktable <- knitr::kable(table, 
                        digits = 2, 
-                       caption = "<center>Table 10: Statistical Sampling Results based on the Hypergeometric Distribution (N = 1000) — <br>Upper Limits at 1 Percent Risk of Overreliance</center>",
+                       caption = "<center>Table 12: Statistical Sampling Results based on the Beta-Binomial Distribution (N = 1000) — <br>Logarithmic Default Bayes Factors in favor of Tolerable Misstatement for a Performance Materiality of 1 Percent</center>",
                        align = "l", 
                        format = "html", 
                        row.names = FALSE, 
                        format.args = list(big.mark = ",", scientific = FALSE),
                        table.attr = "style='width:150%;'")
 ktable <- kableExtra::kable_classic(ktable, position="center", html_font = "Cambria") 
-ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Deviations Found" = 11))
-ktable <- kableExtra::footnote(ktable, general = "This table presents upper limits (body of table) as percentages")
+ktable <- kableExtra::add_header_above(ktable, header = c(" " = 1, "Actual Number of Misstatements Found" = 11))
+ktable <- kableExtra::footnote(ktable, general = "This table presents Bayes factors based on no prior information\nBF = e^log(BF)")
 ktable <- kableExtra::row_spec(ktable, seq(2, nrow(table)-1, 2), background = "#F0F8FF")
 ktable <- kableExtra::kable_styling(ktable, font_size = 11)
 kableExtra::kable_paper(ktable, "striped") 
